tests/NormalTests/paczka1/small_fuzzy/81595568.err
Error in line 2: bCCSe34 A343 32,3
Error in line 15: cU61o Az4z 177,z
Error in line 11: S640 S139 40,8
